--- a/projects/14-memory-cards/css/blocks/_modal.css
+++ b/projects/14-memory-cards/css/blocks/_modal.css
@@ -8,7 +8,7 @@
     display: block;
     opacity: 1;
     z-index: 2;
-    position: absolute;
+    position: fixed;
     top: 0;
     width: 100%;
     height: 100%;
